updated player colors

--- a/public/game.html
+++ b/public/game.html
@@ -12,49 +12,49 @@
         <ul>
         <li id="p0">
           <h2>0</h2>
-          <h3>Player 1</h3>
+          <h3 class="p0">Player 1</h3>
           <span class="puzzled">?</span>
           <h1 class="offline">OFFLINE</h1>
         </li>
         <li id="p1">
           <h2>0</h2>
-          <h3>Player 2</h3>
+          <h3 class="p1">Player 2</h3>
           <span class="puzzled">?</span>
           <h1 class="offline">OFFLINE</h1>
         </li>
         <li id="p2">
           <h2>0</h2>
-          <h3>Player 3</h3>
+          <h3 class="p2">Player 3</h3>
           <span class="puzzled">?</span>
           <h1 class="offline">OFFLINE</h1>
         </li>
         <li id="p3">
           <h2>0</h2>
-          <h3>Player 4</h3>
+          <h3 class="p3">Player 4</h3>
           <span class="puzzled">?</span>
           <h1 class="offline">OFFLINE</h1>
         </li>
         <li id="p4">
           <h2>0</h2>
-          <h3>Player 5</h3>
+          <h3 class="p4">Player 5</h3>
           <span class="puzzled">?</span>
           <h1 class="offline">OFFLINE</h1>
         </li>
         <li id="p5">
           <h2>0</h2>
-          <h3>Player 6</h3>
+          <h3 class="p5">Player 6</h3>
           <span class="puzzled">?</span>
           <h1 class="offline">OFFLINE</h1>
         </li>
         <li id="p6">
           <h2>0</h2>
-          <h3>Player 7</h3>
+          <h3 class="p6">Player 7</h3>
           <span class="puzzled">?</span>
           <h1 class="offline">OFFLINE</h1>
         </li>
         <li id="p7">
           <h2>0</h2>
-          <h3>Player 8</h3>
+          <h3 class="p7">Player 8</h3>
           <span class="puzzled">?</span>
           <h1 class="offline">OFFLINE</h1>
         </li>
