Add local player name to chat footer

--- a/public/game.html
+++ b/public/game.html
@@ -84,7 +84,7 @@
     </div>
     <div id="footer">
       <form id="form">
-        <label for="input">Type here to chat:</label>
+        <label for="input">Type here to chat <h3></h3></label>
         <textarea wrap="hard" autocomplete="off" spellcheck="false" id="input"></textarea>
       </form>
     </div>
