better type here to chat behavior

--- a/public/game.html
+++ b/public/game.html
@@ -83,8 +83,8 @@
       </ul>
     </div>
     <div id="footer">
-      <form id="form">
-        <label for="input">Type here to chat <h3></h3></label>
+      <form>
+        <h3></h3><label for="input">Type here to chat</label>
         <textarea wrap="hard" autocomplete="off" spellcheck="false" id="input"></textarea>
       </form>
     </div>
