centering fixed width layout with static positioning

--- a/public/game.html
+++ b/public/game.html
@@ -7,7 +7,7 @@
     <link rel="shortcut icon" href="http://vincentwoo.com/favicon.ico" />
   </head>
   <body>
-    <div id="wrap">
+      <div id="fixwrap"><div id="fixinner">
       <div id="scoreboard">
         <ul>
         <li id="p0">
@@ -76,6 +76,9 @@
           </li>
         </ul>
       </div>
+      </div></div>
+      </div>
+      <div id="wrap">
       <ul id="chat">
         <li>
           <div class="message cornered">Chat in realtime while you play.</div>
