convert landing page layout

--- a/public/index.html
+++ b/public/index.html
@@ -7,7 +7,7 @@
     <link rel="shortcut icon" href="http://vincentwoo.com/favicon.ico"/>
   </head>
   <body>
-  <div id="wrap">
+  <div id="fixwrap"><div id="fixinner">
     <ul id="menu">
       <li>
         <a class="button" href="/game/"><h2>start a private game</h2></a>
@@ -16,6 +16,8 @@
         <a class="button" href="/game/public/"><h2>join a public game</h2></a>
       </li>
     </ul>
+  </div></div>
+  <div id="wrap">
     <ul id="explanation">
       <li class="message cornered">
       <p>
