--- a/public/index.html
+++ b/public/index.html
@@ -19,23 +19,22 @@
   </div></div>
   <div id="wrap">
     <ul id="explanation">
-      <li class="message cornered">
+      <li><h1>Multiplayer<span style="color:#999">Set</span>.com</h1></li>
+      <li class="message cornered full">
       <p>
       MultiplayerSet is a game about pattern matching. The idea is to find
       <b>sets</b> of three cards that meet certain requirements. Each card has a
       four properties. The properties are <b>amount</b> (of shapes),
       <b>shape</b>, <b>color</b>, and <b>shading</b>.
       </p>
-      </li>
-      <li class="message cornered">
       <p>
       A <b>set</b> is three cards for which each card has, for each property, three
       different properties or one uniform property. Two cards that are both red
       and a third that is green are <b>not</b> a set.
       </p>
       </li>
+      <li><h2>Examples of VALID sets</h2></li>
       <li class="message cornered">
-      <h2>Examples of VALID sets</h2>
       <div class="clear"></div>
       <div class="set">
         <div class="cardwrap" number="0" color="0" shape="0" shading="0"></div>
@@ -57,8 +56,8 @@
       </p>
       <div class="clear"></div>
       </li>
+      <li><h2>Examples of INVALID sets</h2></li>
       <li class="message cornered">
-      <h2>Examples of INVALID sets</h2>
       <p>
       As a rule, if a set has two cards that share a property (such as two cards
       that both have ovals), but the third one differs (it has diamonds), then
@@ -87,8 +86,8 @@
       </p>
       <div class="clear"></div>
       </li>
-      <li class="message cornered">
-      <h2>How to play</h2>
+      <li><h2>How to play</h2></li>
+      <li class="message cornered full">
       <p>
       If you want to play with friends, hit <b>start a private game</b> in the top
       left of this page. You will receive a link you can use to invite other people
