position: fixed scroll fix

--- a/public/index.html
+++ b/public/index.html
@@ -114,6 +114,6 @@
     </ul>
   </div>
   <script src="/client.js"></script>
-    <script>$(document.body).ready(parseCards);</script>
+    <script>$(parseCards);</script>
   </body>
 </html>
