--- a/public/game.html
+++ b/public/game.html
@@ -93,6 +93,6 @@
     </div>
     <script src="/socket.io/socket.io.js"></script>
     <script src="/client.js"></script>
-    <script>$(document.body).ready(startGame);</script>
+    <script>$(startGame);</script>
   </body>
 </html>
