--- a/public/index.html
+++ b/public/index.html
@@ -15,6 +15,20 @@
       <li>
         <a class="button" href="/game/public/"><h2>join a public game</h2></a>
       </li>
+      <li class="message cornered" style="width: 240px; height: 250px;">
+        <script type="text/javascript"><!--
+        google_adtest = "on";
+        google_ad_client = "ca-pub-6528147086648678";
+        /* square */
+        google_ad_slot = "6839502118";
+        google_ad_width = 250;
+        google_ad_height = 250;
+        //-->
+        </script>
+        <script type="text/javascript"
+        src="http://pagead2.googlesyndication.com/pagead/show_ads.js">
+        </script>
+      </li>
     </ul>
   </div></div>
   <div id="wrap">
@@ -114,6 +128,6 @@
     </ul>
   </div>
   <script src="/client.js"></script>
-    <script>$(parseCards);</script>
+  <script>$(parseCards);</script>
   </body>
 </html>
