add ads to game page

--- a/public/game.html
+++ b/public/game.html
@@ -87,6 +87,19 @@
     </div>
     <div id="footer">
       <form>
+        <div id="footer_center">
+          <script type="text/javascript"><!--
+            google_ad_client = "ca-pub-6528147086648678";
+            /* banner */
+            google_ad_slot = "6619357501";
+            google_ad_width = 468;
+            google_ad_height = 60;
+            //-->
+          </script>
+          <script type="text/javascript"
+            src="http://pagead2.googlesyndication.com/pagead/show_ads.js">
+          </script>
+        </div>
         <h3></h3><label for="input">Type here to chat</label>
         <textarea wrap="hard" autocomplete="off" spellcheck="false" id="input"></textarea>
       </form>
