switch to submodule deps, headjs parallel loading, jquery off a CDN

--- a/public/game.html
+++ b/public/game.html
@@ -5,6 +5,7 @@
     <title>set - the game</title>
     <link rel="stylesheet" href="/style.css" />
     <link rel="shortcut icon" href="http://vincentwoo.com/favicon.ico" />
+    <script src="/head.load.js"></script>
   </head>
   <body>
     <div id="fixwrap"><div id="fixinner">
@@ -104,8 +105,16 @@
         <textarea wrap="hard" autocomplete="off" spellcheck="false" id="input"></textarea>
       </form>
     </div>
-    <script src="/socket.io/socket.io.js"></script>
-    <script src="/client.js"></script>
-    <script>$(startGame);</script>
+    <script>
+      head.js('/util.js'
+      ,  '/socket.io/socket.io.js'
+      ,  'http://ajax.googleapis.com/ajax/libs/jquery/1.6.1/jquery.min.js'
+      ,  '/client.js'
+      ,  '/effects.js');
+      
+      head.ready('client.js', function() {
+        $(startGame);
+      });
+    </script>
   </body>
 </html>
