--- a/public/index.html
+++ b/public/index.html
@@ -128,11 +128,9 @@
     </ul>
   </div>
   <script>
-    head.js('/util.js'
-    ,  'http://ajax.googleapis.com/ajax/libs/jquery/1.6.1/jquery.min.js'
-    ,  '/client.js');
-    
-    head.ready('client.js', function() {
+    head.js('http://ajax.googleapis.com/ajax/libs/jquery/1.6.1/jquery.min.js'
+    , '/client.js'
+    , function() {
       $(parseCards);
     });
   </script>
