google analytics tracking

--- a/public/game.html
+++ b/public/game.html
@@ -112,6 +112,7 @@
       , function() {
         $(startGame);
       });
+      head.js('http://www.google-analytics.com/ga.js');
     </script>
   </body>
 </html>
