--- a/public/index.html
+++ b/public/index.html
@@ -133,6 +133,7 @@
     , function() {
       $(parseCards);
     });
+    head.js('http://www.google-analytics.com/ga.js');
   </script>
   </body>
 </html>
