--- a/public/game.html
+++ b/public/game.html
@@ -112,7 +112,10 @@
       , function() {
         $(startGame);
       });
-      head.js('http://www.google-analytics.com/ga.js');
+      head.js ('http://www.google-analytics.com/ga.js', function () {
+        var tracker=_gat._getTracker ('UA-267782-3');
+        tracker._trackPageview ();
+      });
     </script>
   </body>
 </html>
