--- a/public/index.html
+++ b/public/index.html
@@ -133,7 +133,10 @@
     , function() {
       $(parseCards);
     });
-    head.js('http://www.google-analytics.com/ga.js');
+    head.js ('http://www.google-analytics.com/ga.js', function () {
+      var tracker=_gat._getTracker ('UA-267782-3');
+      tracker._trackPageview ();
+    });
   </script>
   </body>
 </html>
