socket.io deps done right

--- a/public/game.html
+++ b/public/game.html
@@ -113,8 +113,7 @@
         $(startGame);
       });
       head.js ('http://www.google-analytics.com/ga.js', function () {
-        var tracker=_gat._getTracker ('UA-267782-3');
-        tracker._trackPageview ();
+        _gat._getTracker('UA-267782-3')._trackPageview();
       });
     </script>
   </body>
