stop serving socket.io.js independently

--- a/public/game.html
+++ b/public/game.html
@@ -106,8 +106,7 @@
       </form>
     </div>
     <script>
-      head.js('/socket.io/socket.io.js'
-      , 'http://ajax.googleapis.com/ajax/libs/jquery/1.6.1/jquery.min.js'
+      head.js('http://ajax.googleapis.com/ajax/libs/jquery/1.6.1/jquery.min.js'
       , '/client.js'
       , function() {
         $(startGame);
