--- a/public/game.html
+++ b/public/game.html
@@ -91,6 +91,7 @@
         <div id="footer_center">
           <script type="text/javascript"><!--
             google_ad_client = "ca-pub-6528147086648678";
+            window.google_analytics_uacct = "UA-267782-3";
             /* banner */
             google_ad_slot = "6619357501";
             google_ad_width = 468;
