--- a/public/index.html
+++ b/public/index.html
@@ -19,6 +19,7 @@
         <li class="message cornered" style="width: 240px; height: 250px;">
           <script type="text/javascript"><!--
           google_ad_client = "ca-pub-6528147086648678";
+          window.google_analytics_uacct = "UA-267782-3";
           /* square */
           google_ad_slot = "6839502118";
           google_ad_width = 250;
