add a meta-description

--- a/public/game.html
+++ b/public/game.html
@@ -2,6 +2,7 @@
 <html lang="en">
   <head>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
+    <meta name="description" content="Play the card game Set online with your friends in realtime"/>
     <title>set - the game</title>
     <link rel="stylesheet" href="/style.css" />
     <link rel="shortcut icon" href="http://vincentwoo.com/favicon.ico" />
