new html titles

--- a/client/index.html
+++ b/client/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
     <meta name="description" content="Play the card game Set online with your friends in realtime"/>
-    <title>set - the game</title>
+    <title>MultiplayerSet - realtime online card game</title>
     <link rel="stylesheet" href="/style.css"/>
     <link rel="shortcut icon" href="http://vincentwoo.com/favicon.ico"/>
   </head>
