add header to both pages

--- a/client/game.html
+++ b/client/game.html
@@ -8,6 +8,9 @@
     <link rel="shortcut icon" href="http://vincentwoo.com/favicon.ico" />
   </head>
   <body>
+    <div id="header">
+      <h1><a href="/">Multiplayer<span style="color:#999">Set</span>.com</a></h1>
+    </div>
     <div id="fixwrap"><div id="fixinner">
       <div id="scoreboard">
         <ul>
