--- a/client/index.html
+++ b/client/index.html
@@ -8,9 +8,11 @@
     <link rel="shortcut icon" href="http://vincentwoo.com/favicon.ico"/>
   </head>
   <body>
+    <div id="header">
+      <h1><a href="/">Multiplayer<span style="color:#999">Set</span>.com</a></h1>
+    </div>
     <div id="wrap">
       <ul id="explanation">
-        <li><h1>Multiplayer<span style="color:#999">Set</span>.com</h1></li>
         <li class="message cornered full">
         <p>
         MultiplayerSet is a game about pattern matching. The idea is to find
