full async adsense

--- a/client/game.html
+++ b/client/game.html
@@ -92,18 +92,6 @@
     <div id="footer">
       <form>
         <div id="footer_center">
-          <script type="text/javascript"><!--
-            google_ad_client = "ca-pub-6528147086648678";
-            window.google_analytics_uacct = "UA-267782-3";
-            /* banner */
-            google_ad_slot = "6619357501";
-            google_ad_width = 468;
-            google_ad_height = 60;
-            //-->
-          </script>
-          <script type="text/javascript"
-            src="http://pagead2.googlesyndication.com/pagead/show_ads.js">
-          </script>
         </div>
         <h3></h3><label for="input">Type here to chat</label>
         <textarea wrap="hard" autocomplete="off" spellcheck="false" id="input"></textarea>
@@ -116,9 +104,19 @@
       , function() {
         $(startGame);
       });
+      
+      google_ad_client = "ca-pub-6528147086648678";
+      window.google_analytics_uacct = "UA-267782-3";
+      google_ad_slot = "6619357501";
+      google_ad_width = 468;
+      google_ad_height = 60;
       head.js ('http://www.google-analytics.com/ga.js', function () {
         _gat._getTracker('UA-267782-3')._trackPageview();
       });
+      document.write = function(text) {
+        document.getElementById('footer_center').innerHTML = text;
+      }
+      head.js('http://pagead2.googlesyndication.com/pagead/show_ads.js');
     </script>
   </body>
 </html>
