--- a/client/index.html
+++ b/client/index.html
@@ -114,19 +114,7 @@
         <li>
           <a class="button" href="/game/public/"><h2>join a public game</h2></a>
         </li>
-        <li class="message cornered" style="width: 240px; height: 250px;">
-          <script type="text/javascript"><!--
-          google_ad_client = "ca-pub-6528147086648678";
-          window.google_analytics_uacct = "UA-267782-3";
-          /* square */
-          google_ad_slot = "6839502118";
-          google_ad_width = 250;
-          google_ad_height = 250;
-          //-->
-          </script>
-          <script type="text/javascript"
-          src="http://pagead2.googlesyndication.com/pagead/show_ads.js">
-          </script>
+        <li class="message cornered" style="width: 240px; height: 250px;" id="display_ad">
         </li>
       </ul>
     </div></div>
@@ -137,9 +125,19 @@
       , function() {
         $(parseCards);
       });
-      head.js ('http://www.google-analytics.com/ga.js', function () {
+      
+      google_ad_client = "ca-pub-6528147086648678";
+      window.google_analytics_uacct = "UA-267782-3";
+      google_ad_slot = "6839502118";
+      google_ad_width = 250;
+      google_ad_height = 250;
+      head.js('http://www.google-analytics.com/ga.js', function () {
         _gat._getTracker('UA-267782-3')._trackPageview();
       });
+      document.write = function(text) {
+        document.getElementById('display_ad').innerHTML = text;
+      }
+      head.js('http://pagead2.googlesyndication.com/pagead/show_ads.js');
     </script>
   </body>
 </html>
