adding a real favicon

--- a/client/game.html
+++ b/client/game.html
@@ -1,11 +1,11 @@
 <!doctype html>
 <html lang="en">
   <head>
-    <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
+    <meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
     <meta name="description" content="Play the card game Set online with your friends in realtime"/>
     <title>MultiplayerSet - realtime online card game</title>
-    <link rel="stylesheet" href="/style.css" />
-    <link rel="shortcut icon" href="http://vincentwoo.com/favicon.ico" />
+    <link rel="stylesheet" href="/style.css"/>
+    <link rel="shortcut icon" href="/favicon.ico"/>
   </head>
   <body>
     <div id="header">
