--- a/client/index.html
+++ b/client/index.html
@@ -5,7 +5,7 @@
     <meta name="description" content="Play the card game Set online with your friends in realtime"/>
     <title>MultiplayerSet - realtime online card game</title>
     <link rel="stylesheet" href="/style.css"/>
-    <link rel="shortcut icon" href="http://vincentwoo.com/favicon.ico"/>
+    <link rel="shortcut icon" href="/favicon.ico"/>
   </head>
   <body>
     <div id="header">
