--- a/client/index.html
+++ b/client/index.html
@@ -9,7 +9,7 @@
   </head>
   <body>
     <div id="header">
-      <h1><a href="/">Multiplayer<span style="color:#999">Set</span>.com</a></h1>
+      <h1><a href="/">Multiplayer<span style="color:#999">Set</span></a></h1>
     </div>
     <div id="wrap">
       <ul id="explanation">
