adding a thumper to game loading, fix z-index problem in ff3.6

--- a/client/game.html
+++ b/client/game.html
@@ -65,6 +65,10 @@
         </ul>
       </div>
       <div id="boardwrap">
+      <div id="announcement" class="loading">
+        <h1>Connecting</h1>
+        Please hold while we retreive your game
+      </div>
         <table id="board"></table>
         <ul>
           <li>
