change ad bg color, more about stuff

--- a/client/about.html
+++ b/client/about.html
@@ -13,6 +13,7 @@
     </div>
     <div id="wrap">
       <ul id="explanation">
+        <li><h2>About</h2></li>
         <li class="message cornered full">
           <p>
           MultiplayerSet is a realtime multiplayer game written in <a href="http://nodejs.org/">nodeJS</a> on
@@ -20,10 +21,10 @@
           </p>
           <ul>
           <li>
-            <a href="http://vincentwoo.com">Vincent</a> is a programmer working for Google. He currently lives in the bay area. He did all the computery stuff.
+            <a href="http://vincentwoo.com">Vincent Woo</a> is a programmer working for Google. He currently lives in the bay area. He did all the computery stuff.
           </li>
           <li>
-            <a href="http://tiffanyenriquez.com">Tiffany</a> is a designer who currently works at eBay. She did the graphics and layouting.
+            <a href="http://tiffanyenriquez.com">Tiffany Enriquez</a> is a designer who currently works at eBay. She did the graphics and layouting.
           </li>
           </ul>
         </li>
@@ -32,10 +33,10 @@
     <div id="fixwrap"><div id="fixinner">
       <ul id="menu">
         <li>
-          <a class="button" href="/game/"><h2>start a private game</h2></a>
+          <a class="button" href="/game/"><h2>Start a private game</h2></a>
         </li>
         <li>
-          <a class="button" href="/game/public/"><h2>join a public game</h2></a>
+          <a class="button" href="/game/public/"><h2>Join a public game</h2></a>
         </li>
         <li class="message cornered" id="display_ad">
           <script>
@@ -48,7 +49,7 @@
           <script src="http://pagead2.googlesyndication.com/pagead/show_ads.js"></script>
         </li>
         <li>
-          <a class="button" href="/about/"><h2>about</h2></a>
+          <a class="button" href="/"><h2>Home</h2></a>
         </li>
       </ul>
     </div></div>
