--- a/client/index.html
+++ b/client/index.html
@@ -109,10 +109,10 @@
     <div id="fixwrap"><div id="fixinner">
       <ul id="menu">
         <li>
-          <a class="button" href="/game/"><h2>start a private game</h2></a>
+          <a class="button" href="/game/"><h2>Start a private game</h2></a>
         </li>
         <li>
-          <a class="button" href="/game/public/"><h2>join a public game</h2></a>
+          <a class="button" href="/game/public/"><h2>Join a public game</h2></a>
         </li>
         <li class="message cornered" id="display_ad">
           <script>
@@ -125,7 +125,7 @@
           <script src="http://pagead2.googlesyndication.com/pagead/show_ads.js"></script>
         </li>
         <li>
-          <a class="button" href="/about/"><h2>about</h2></a>
+          <a class="button" href="/about/"><h2>About</h2></a>
         </li>
       </ul>
     </div></div>
